--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+<li><a href="recipes/cilantro-lime-chicken.html">Slow Cooker Cilantro Lime Chicken</a></li>
+    </ul>
    </body>
 </html>
