--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
-<li><a href="recipes/cilantro-lime-chicken.html">Slow Cooker Cilantro Lime Chicken</a></li>
+        <li><a href="recipes/cilantro-lime-chicken.html">Slow Cooker Cilantro Lime Chicken</a></li>
+        <li><a href="recipes/warm-berry-compote.html">Warm Berry Compote</a></li>
     </ul>
    </body>
 </html>
