--- a/recipes/cilantro-lime-chicken.html
+++ b/recipes/cilantro-lime-chicken.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Slow Cooker Cilantro Lime Chicken</h1>
-    <img src="../images/cilantro-lime-chicken.jpg" alt="cilantro lime chicken">
+    <img src="../images/cilantro-lime-chicken.jpg" alt="cilantro lime chicken" height="250">
     <h2>Description</h2>
     <p>This slow cooker cilantro-lime chicken is bursting with flavor. Try it in tacos for a nice change from plain chicken.</p>
     <h2>Ingredients</h2>
