--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Lasagna</h1>
-    <img src="../images/lasagna.jpg" alt="lasagna">
+    <img src="../images/lasagna.jpg" alt="lasagna" height="250">
     <h2>Description</h2>
     <p>Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below.</p>
     <h2>Ingredients</h2>
