--- a/recipes/warm-berry-compote.html
+++ b/recipes/warm-berry-compote.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Warm Berry Compote</h1>
-    <img src="../images/warm-berry-compote.jpg" alt="warm berry compote">
+    <img src="../images/warm-berry-compote.jpg" alt="warm berry compote" height="250">
     <h2>Description</h2>
     <p>This berry compote is made in a slow cooker with frozen berries and orange juice. It's a yummy dessert by itself or over ice cream.</p>
     <h2>Ingredients</h2>
