--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/cilantro-lime-chicken.html">Slow Cooker Cilantro Lime Chicken</a></li>
-        <li><a href="recipes/warm-berry-compote.html">Warm Berry Compote</a></li>
-    </ul>
+    <div class="card">
+      <h1>Odin Recipes</h1>
+      <div class="box">
+        <ul>
+          <li><a href="recipes/lasagna.html">Lasagna</a></li>
+          <li><a href="recipes/cilantro-lime-chicken.html">Slow Cooker Cilantro Lime Chicken</a></li>
+          <li><a href="recipes/warm-berry-compote.html">Warm Berry Compote</a></li>
+        </ul>
+      </div>
+    </div>
    </body>
 </html>
