--- a/recipes/warm-berry-compote.html
+++ b/recipes/warm-berry-compote.html
@@ -6,23 +6,31 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <h1>Warm Berry Compote</h1>
-    <img src="../images/warm-berry-compote.jpg" alt="warm berry compote" height="250">
-    <h2>Description</h2>
-    <p>This berry compote is made in a slow cooker with frozen berries and orange juice. It's a yummy dessert by itself or over ice cream.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>6 cups frozen mixed berries</li>
-        <li>½ cup white sugar</li>
-        <li>¼ cup orange juice</li>
-        <li>1 ½ teaspoons finely grated orange zest</li>
-        <li>2 tablespoons cornstarch</li>
-        <li>2 tablespoons water</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Stir frozen berries, sugar, orange juice, and orange zest together in a slow cooker. Cover and cook on High until bubbling, about 1 1/2 hours.</li>
-        <li>Stir cornstarch and water together in a cup until fully dissolved. Stir into berry mixture. Cover again and cook until thickened, 5 to 10 minutes. Serve warm or at room temperature.</li>
-    </ol>
+    <div class="card">
+      <h1>Warm Berry Compote</h1>
+      <img src="../images/warm-berry-compote.jpg" alt="warm berry compote" height="250">
+      <h2>Description</h2>
+      <div class="box">
+        <p>This berry compote is made in a slow cooker with frozen berries and orange juice. It's a yummy dessert by itself or over ice cream.</p>
+      </div>
+      <h2>Ingredients</h2>
+      <div class="box">
+        <ul>
+          <li>6 cups frozen mixed berries</li>
+          <li>½ cup white sugar</li>
+          <li>¼ cup orange juice</li>
+          <li>1 ½ teaspoons finely grated orange zest</li>
+          <li>2 tablespoons cornstarch</li>
+          <li>2 tablespoons water</li>
+        </ul>
+      </div>
+      <h2>Steps</h2>
+      <div class="box">
+        <ol>
+          <li>Stir frozen berries, sugar, orange juice, and orange zest together in a slow cooker. Cover and cook on High until bubbling, about 1 1/2 hours.</li>
+          <li>Stir cornstarch and water together in a cup until fully dissolved. Stir into berry mixture. Cover again and cook until thickened, 5 to 10 minutes. Serve warm or at room temperature.</li>
+        </ol>
+      </div>
+    </div>
    </body>
 </html>
